fix子查询的bug